[package]
name = "earthspan-protocol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "earthspan_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.0"
spl-tlv-account-resolution = "0.11.1"
spl-transfer-hook-interface = "2.1.0"
spl-type-length-value = "0.9.1"

